3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Experience cleanup - the main functional change is that no upper limit of 
   exp in an individual skill, save for the limit that there is an upper
   limit of total exp a player can have.  Thus, if a player concentrates
   complete in one skill, he could get to level 110 in it.  A lot of
   code cleanup was done - so much had gotten added to the exp code that it
   was a real mess.
common/living.c: re-arrange some of the code, so all the exp related
   functions are together.  remove adjust_exp(), change check_dm_add_exp_to_obj()
   to check_exp_adjust.  Add new functions add_player_exp(), check_exp_loss(),
   check_exp_add(), subtract_player_exp().
include/libproto.h: rebuilt.
server/c_wiz.c: Update command_addexp() to use new exp functions.
server/gods.c: Update lose_priest_exp() to use new exp functions.
MSW 2002-10-11

configure, configure.ac: Remove --enable-old-layout option - that is more than
    3+ years old now.  Add --enable-dmalloc option so code can be compiled
    with dmalloc debugging without needing to change/rebuild the configure
    files.
common/porting.c: Add stdarg.h to list of included files.
include/autoconf.h.in: rebuilt, HAVE_LIBDMALLOC undef added.
random_maps/square_spiral.c: fix bound checking value.
MSW 2002-10-07

common/item.c: Fix bug with identified potions not getting set to proper name.
MSW 2002-10-03

Bugfixes:  Add golem_count element to player structure so we can properly
   detect when golem is destroyed.  This fixes a crash in some places as the
   code tried to remove this already removed golem.
  Fix crash when null player maps.