@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Minor bugfixes:
+common/living.c: Fix it so that if you die, you won't _gain_ exp in any
+  skills - could happen if new table is harder - 3 level loss could still
+  mean having higher exp total.
+common/map.c: Fix on_same_map so check to see if either object has null
+  map value - prevents crashes.
+MSW 2002-10-13
+
+
 Experience cleanup - the main functional change is that no upper limit of 
    exp in an individual skill, save for the limit that there is an upper
    limit of total exp a player can have.  Thus, if a player concentrates
